<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diak.ittapirosholapiros.Main3Activity">

    <Button
        android:id="@+id/btn_magyar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginTop="135dp"
        android:layout_toLeftOf="@+id/btn_francia"
        android:layout_toStartOf="@+id/btn_francia"
        android:background="@drawable/hatlap" />

    <Button
        android:id="@+id/btn_francia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_magyar"
        android:layout_alignBottom="@+id/btn_magyar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:background="@drawable/kor_asz" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_magyar"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="105dp"
        android:background="#ffe600"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/easy"
        android:textSize="10pt" />

    <Button
        android:id="@+id/btn_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_easy"
        android:layout_alignBottom="@+id/btn_easy"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/btn_easy"
        android:layout_toRightOf="@+id/btn_easy"
        android:background="#ffe600"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/medium"
        android:textSize="10pt" />

    <Button
        android:id="@+id/btn_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_medium"
        android:layout_alignBottom="@+id/btn_medium"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/btn_medium"
        android:layout_toRightOf="@+id/btn_medium"
        android:background="#ffe600"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/hard"
        android:textSize="10pt" />
</RelativeLayout>
